# jsonschema-experimental

./: .gitmodules  Cargo.toml  LICENSE  README.md  rustfmt.toml
crates/jpointer/: Cargo.toml
crates/jpointer/src/: lib.rs
crates/jsonlike/: Cargo.toml  README.md
crates/jsonlike/src/: error.rs  lib.rs
crates/jsonlike/src/impls/: mod.rs  pyo3.rs  serde_json.rs
crates/referencing/: Cargo.toml  README.md
crates/referencing-suite/: Cargo.toml  README.md
crates/referencing-suite/src/: lib.rs
crates/referencing/src/: anchors.rs  error.rs  jsonschema.rs  lib.rs  path.rs  registry.rs  resources.rs  specification.rs  types.rs
crates/referencing/tests/: test_suite.rs
src/: blocking.rs  builder.rs  cow.rs  error.rs  format.rs  lib.rs  maybe_owned.rs  output.rs  resolver.rs  validator.rs
src/compiler/: mod.rs
src/drafts/: draft04.rs  draft07.rs  draft202012.rs  mod.rs
src/graph/: mod.rs  node.rs
src/schema/: mod.rs
src/validation/: builder.rs  formats.rs  iter.rs  mod.rs  state.rs  validator.rs
src/vocabulary/: mod.rs
