[package]
name = "jsonschema"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "crates/jsonlike",
    "crates/referencing",
    "crates/referencing-suite",
]

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

[dev-dependencies]
tokio = { version = "1.34", features = ["full"] }

[features]
default = ["serde", "serde_json"]
serde = ["dep:serde"]
serde_json = ["dep:serde_json", "jsonlike/serde_json"]

[dependencies.jsonlike]
path = "crates/jsonlike"
