[package]
name = "jsonlike"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = { version = "1", optional = true }
pyo3 = { version = "0.20", optional = true }

[dev-dependencies]
pyo3 = { version = "0.20", features = ["auto-initialize"] }
serde_json = "1"
test-case = "3.2.1"

[features]
arbitrary_precision = ["serde_json?/arbitrary_precision"]
serde_json = ["dep:serde_json"]
pyo3 = ["dep:pyo3"]
