[package]
name = "referencing"
version = "0.1.0"
edition = "2021"

[dependencies]
aho-corasick = "1.1"
jsonlike = { path = "../jsonlike" }
percent-encoding = "2.3"
url = "2.4.1"

[dev-dependencies]
jsonlike = { path = "../jsonlike", features = ["serde_json"] }
once_cell = "1.18"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
suite = { package = "referencing-suite", path = "../referencing-suite/" }
test-case = "3.3.1"

[features]
serde_json = ["jsonlike/serde_json"]
pyo3 = ["jsonlike/pyo3"]
